[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DrDictaphone"
version = "0.1"
authors = [
    { name = "Ole Kliemann", email = "mail@olekliemann.de" }
]
description = "Dictation app for the terminal"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"

[project.urls]
homepage = "https://github.com/olekli/DrDictaphone"
