[tool.poetry]
name = "DrDictaphone"
version = "0.9.5"
authors = ["Ole Kliemann <mail@olekliemann.de>"]
description = "Dictation app for the terminal and Neovim"
readme = "README.md"
license = "LICENSE"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Topic :: Text Processing",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
]

[tool.poetry.dependencies]
python = ">=3.10"
sounddevice = ">=0.4.6"
#speechbrain = ">=0.5.16"
pydub = "0.25.1"
pydantic = ">=2.5.3"
openai = ">=1.6.1"
python-dotenv = ">=1.0.0"
prompt-toolkit = ">=3.0.43"
MrEventLoop = ">=0.6.2"
aiofiles = ">=23.2.1"
drdictaphone-shared = "0.9.3"
#numpy = ">=1.26.0,<2"
pyyaml = "^6.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://github.com/olekli/DrDictaphone"
