[tool.poetry]
name = "drdictaphone-shared"
version = "0.9.3"
authors = ["Ole Kliemann <mail@olekliemann.de>"]
description = "Dictation app for the terminal and Neovim"
license = "LICENSE"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Topic :: Text Processing",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
]

[tool.poetry.dependencies]
python = ">=3.6"
MrEventLoop = ">=0.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "https://github.com/olekli/DrDictaphone"
